--- a/user/themes/imaginarious/scss/template-customized/_events-grid.scss
+++ b/user/themes/imaginarious/scss/template-customized/_events-grid.scss
@@ -21,6 +21,7 @@
 
         &__event {
         	flex: 1;
+        	max-width: 50%;
         }
     }
 }
